Add support for SASL relayhost, update README

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: postmap sasl_passwd
+  command: postmap /etc/postfix/sasl/passwd
+  when: postfix_relayhost_fqdn is defined
+
 - name: restart postfix
   service:
     name: postfix
